@@ -22,4 +22,4 @@ config.status
 stamp-h1
 build/*
 .qmake.stash
-
+*.bak
