@@ -98,7 +98,7 @@
 	"variables":
 		[
 			{
-				"colour":"#5a2213",
+				"colour":"#875334",
 				"italic":false,
 				"bold":true
 			}
